crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__doctype_public_case_hyphen_sensitivity_2.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<!dOcTyPe hTmL pUbLiC \"aBc\" \"xYz\">\"####)"
---
[
    Token {
        data: "dOcTyPe hTmL pUbLiC \"aBc\" \"xYz\"",
        attrs: None,
        kind: ProcessingInstruction,
        is_implied: false,
    },
]
