crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__doctype_publik.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<!DOCTYPE html PUBLIK \"AbC\" \"XyZ\">\"####)"
---
[
    Token {
        data: "DOCTYPE html PUBLIK \"AbC\" \"XyZ\"",
        attrs: None,
        kind: ProcessingInstruction,
        is_implied: false,
    },
]
