crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__doctype_sistem.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<!DOCTYPE html SISTEM \"AbC\">\"####)"
---
[
    Token {
        data: "",
        attrs: Some(
            {
                "!DOCTYPE html SISTEM \"AbC\"": None,
            },
        ),
        kind: ProcessingInstruction,
        is_implied: false,
    },
]
