crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__doctype_sys.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<!DOCTYPE html SYS\"####)"
---
[
    Token {
        data: "DOCTYPE html SYS",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
