crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__doctype_system_case_hyphen_sensitivity_1.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<!DoCtYpE HtMl SyStEm \"XyZ\">\"####)"
---
[
    Token {
        data: "DoCtYpE HtMl SyStEm \"XyZ\"",
        attrs: None,
        kind: ProcessingInstruction,
        is_implied: false,
    },
]
