crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__duplicate_close_tag_attributes.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"</x x x>\"####)"
---
[]
