crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__empty_decimal_numeric_entities.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"&# &#; \"####)"
---
[
    Token {
        data: "&# &#; ",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
